--- a/employee-service.properties
+++ b/employee-service.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=8081
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.boot.messag= Hello, Employee Service!
